--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DC2A615D-004E-4B3C-930B-360EFA0C640B}</ProjectGuid>
+    <ProjectGuid>{0FA42F3A-BCD6-4342-BDFB-6E18B45248B5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PSC2013.ES.GUI</RootNamespace>
@@ -12,21 +12,6 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -55,7 +40,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,54 +50,47 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Misc\ListBoxOutputTarget.cs" />
-    <Compile Include="NewSimulation\DiseaseLocationPanel.cs">
+    <Compile Include="Components\EComponentTag.cs" />
+    <Compile Include="Components\IntComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="NewSimulation\DiseaseLocationPanel.Designer.cs">
-      <DependentUpon>DiseaseLocationPanel.cs</DependentUpon>
+    <Compile Include="Components\LongComponent.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="NewSimulation\FactorContainerForm.cs">
+    <Compile Include="Components\SettingsComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Components\SettingsComponent.Designer.cs">
+      <DependentUpon>SettingsComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Components\TextComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewSimulation\FactorContainerForm.Designer.cs">
-      <DependentUpon>FactorContainerForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="NewSimulation\NewSimulationForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="NewSimulation\NewSimulationForm.Designer.cs">
-      <DependentUpon>NewSimulationForm.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReviewSimulation\ReviewForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Simulation\SimulationFirstContainer.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ReviewSimulation\ReviewForm.Designer.cs">
-      <DependentUpon>ReviewForm.cs</DependentUpon>
+    <Compile Include="Simulation\SimulationFirstContainer.Designer.cs">
+      <DependentUpon>SimulationFirstContainer.cs</DependentUpon>
     </Compile>
-    <Compile Include="ReviewSimulation\ReviewSimulationForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Simulation\SimulationSettingsPanel.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ReviewSimulation\ReviewSimulationForm.Designer.cs">
-      <DependentUpon>ReviewSimulationForm.cs</DependentUpon>
+    <Compile Include="Simulation\SimulationSettingsPanel.Designer.cs">
+      <DependentUpon>SimulationSettingsPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="StartWindow.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="StartWindow.Designer.cs">
-      <DependentUpon>StartWindow.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="NewSimulation\DiseaseLocationPanel.resx">
-      <DependentUpon>DiseaseLocationPanel.cs</DependentUpon>
+    <EmbeddedResource Include="Components\SettingsComponent.resx">
+      <DependentUpon>SettingsComponent.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NewSimulation\FactorContainerForm.resx">
-      <DependentUpon>FactorContainerForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="NewSimulation\NewSimulationForm.resx">
-      <DependentUpon>NewSimulationForm.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -125,14 +102,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ReviewSimulation\ReviewForm.resx">
-      <DependentUpon>ReviewForm.cs</DependentUpon>
+    <EmbeddedResource Include="Simulation\SimulationFirstContainer.resx">
+      <DependentUpon>SimulationFirstContainer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ReviewSimulation\ReviewSimulationForm.resx">
-      <DependentUpon>ReviewSimulationForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="StartWindow.resx">
-      <DependentUpon>StartWindow.cs</DependentUpon>
+    <EmbeddedResource Include="Simulation\SimulationSettingsPanel.resx">
+      <DependentUpon>SimulationSettingsPanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
@@ -146,29 +120,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EpidemicSim_Library\EpidemicSim_Library.csproj">
-      <Project>{48aafbb6-b6c5-49e3-9a45-dedaa3a4cdde}</Project>
-      <Name>EpidemicSim_Library</Name>
-    </ProjectReference>
+    <Folder Include="Review\" />
   </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
-      <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
