--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -72,18 +72,30 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Miscellaneous\Seperator.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Miscellaneous\Seperator.Designer.cs">
+      <DependentUpon>Seperator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Simulation\Panels\SimulationDiseasePanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Simulation\Panels\SimulationDiseasePanel.Designer.cs">
+      <DependentUpon>SimulationDiseasePanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Simulation\SimulationFirstContainer.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Simulation\SimulationFirstContainer.Designer.cs">
       <DependentUpon>SimulationFirstContainer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Simulation\SimulationSettingsPanel.cs">
+    <Compile Include="Simulation\Panels\SimulationSettingsPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Simulation\SimulationSettingsPanel.Designer.cs">
+    <Compile Include="Simulation\Panels\SimulationSettingsPanel.Designer.cs">
       <DependentUpon>SimulationSettingsPanel.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Components\SettingsComponent.resx">
@@ -91,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Miscellaneous\Seperator.resx">
+      <DependentUpon>Seperator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -102,10 +117,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Simulation\Panels\SimulationDiseasePanel.resx">
+      <DependentUpon>SimulationDiseasePanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Simulation\SimulationFirstContainer.resx">
       <DependentUpon>SimulationFirstContainer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Simulation\SimulationSettingsPanel.resx">
+    <EmbeddedResource Include="Simulation\Panels\SimulationSettingsPanel.resx">
       <DependentUpon>SimulationSettingsPanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
