--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -51,6 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\EComponentTag.cs" />
+    <Compile Include="Components\FactorComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Components\IntComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -80,6 +83,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Simulation\FactorContainerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Simulation\FactorContainerForm.Designer.cs">
+      <DependentUpon>FactorContainerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Simulation\Panels\SimulationDiseasePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -117,6 +126,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Simulation\FactorContainerForm.resx">
+      <DependentUpon>FactorContainerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Simulation\Panels\SimulationDiseasePanel.resx">
       <DependentUpon>SimulationDiseasePanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -139,6 +151,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Review\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EpidemicSim_Library\EpidemicSim_Library.csproj">
+      <Project>{48aafbb6-b6c5-49e3-9a45-dedaa3a4cdde}</Project>
+      <Name>EpidemicSim_Library</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
