--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Components\IntComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Components\ISettingsComponent.cs" />
     <Compile Include="Components\LongComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -84,6 +85,7 @@
     <Compile Include="Miscellaneous\Seperator.Designer.cs">
       <DependentUpon>Seperator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Miscellaneous\SettingsContainer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Simulation\FactorContainerForm.cs">
@@ -92,6 +94,7 @@
     <Compile Include="Simulation\FactorContainerForm.Designer.cs">
       <DependentUpon>FactorContainerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Simulation\Panels\ISimulationPanel.cs" />
     <Compile Include="Simulation\Panels\SimulationDiseasePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
