--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Components\LongComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Components\PathComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Components\SettingsComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -79,11 +82,11 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Miscellaneous\Seperator.cs">
+    <Compile Include="Miscellaneous\Separator.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Miscellaneous\Seperator.Designer.cs">
-      <DependentUpon>Seperator.cs</DependentUpon>
+    <Compile Include="Miscellaneous\Separator.Designer.cs">
+      <DependentUpon>Separator.cs</DependentUpon>
     </Compile>
     <Compile Include="Miscellaneous\SettingsContainer.cs" />
     <Compile Include="Program.cs" />
@@ -100,6 +103,12 @@
     </Compile>
     <Compile Include="Simulation\Panels\SimulationDiseasePanel.Designer.cs">
       <DependentUpon>SimulationDiseasePanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Simulation\Panels\SimulationFinalSettingsPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Simulation\Panels\SimulationFinalSettingsPanel.Designer.cs">
+      <DependentUpon>SimulationFinalSettingsPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Simulation\Panels\SimulationStartlocationPanel.cs">
       <SubType>UserControl</SubType>
@@ -125,8 +134,8 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Miscellaneous\Seperator.resx">
-      <DependentUpon>Seperator.cs</DependentUpon>
+    <EmbeddedResource Include="Miscellaneous\Separator.resx">
+      <DependentUpon>Separator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -143,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Simulation\Panels\SimulationDiseasePanel.resx">
       <DependentUpon>SimulationDiseasePanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Simulation\Panels\SimulationFinalSettingsPanel.resx">
+      <DependentUpon>SimulationFinalSettingsPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Simulation\Panels\SimulationStartlocationPanel.resx">
       <DependentUpon>SimulationStartlocationPanel.cs</DependentUpon>
