--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -57,7 +57,9 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Simulation\Components\AgeingComponent.cs" />
     <Compile Include="Simulation\Components\DebugInfectionComponent.cs" />
+    <Compile Include="Simulation\Components\DiseaseDeathComponent.cs" />
     <Compile Include="Simulation\Components\DiseaseEffectComponent.cs" />
+    <Compile Include="Simulation\Components\DiseaseTickComponent.cs" />
     <Compile Include="Simulation\Components\InfectionComponent.cs" />
     <Compile Include="Simulation\Components\MindsetComponent.cs" />
     <Compile Include="Simulation\Components\MovementComponent.cs" />
