--- a/EpidemicSim_Library/EpidemicSim_Library.csproj
+++ b/EpidemicSim_Library/EpidemicSim_Library.csproj
@@ -46,14 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions.cs" />
-    <Compile Include="IO\DiseaseIO.cs" />
+    <Compile Include="IO\Writers\DiseaseWriter.cs" />
     <Compile Include="IO\OutputTargets\ConsoleOutputTarget.cs" />
     <Compile Include="EpidemicSimulator.cs" />
     <Compile Include="IO\OutputTargets\IOutputTarget.cs" />
     <Compile Include="IO\OutputTargets\OutputTargetManager.cs" />
     <Compile Include="IO\OutputTargets\OutputTargetWriter.cs" />
-    <Compile Include="IO\Readers\ArchiveReader.cs" />
-    <Compile Include="IO\Readers\ContinuationEventArgs.cs" />
     <Compile Include="IO\Readers\DepartmentMapReader.cs" />
     <Compile Include="IO\Writers\ArchiveBinaryWriter.cs" />
     <Compile Include="Constants.cs" />
@@ -68,7 +66,6 @@
     <Compile Include="Simulation\Components\MovementComponent.cs" />
     <Compile Include="Simulation\Components\SimulationComponent.cs" />
     <Compile Include="Simulation\SimulationEventArgs.cs" />
-    <Compile Include="Simulation\SimulationException.cs" />
     <Compile Include="Snapshot\CellSnapshot.cs" />
     <Compile Include="AreaData\Department.cs" />
     <Compile Include="AreaData\DepartmentInfo.cs" />
@@ -78,7 +75,7 @@
     <Compile Include="Snapshot\TickSnapshot.cs" />
     <Compile Include="Diseases\Disease.cs" />
     <Compile Include="Diseases\FactorContainer.cs" />
-    <Compile Include="IO\Files\IBinaryFile.cs" />
+    <Compile Include="IO\IBinaryObject.cs" />
     <Compile Include="IO\Writers\IBinaryWriter.cs" />
     <Compile Include="PopulationData\EAge.cs" />
     <Compile Include="PopulationData\EGender.cs" />
