--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Simulation\FactorContainerForm.Designer.cs">
       <DependentUpon>FactorContainerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Simulation\Panels\IRawSimulationPanel.cs" />
     <Compile Include="Simulation\Panels\ISimulationPanel.cs" />
     <Compile Include="Simulation\Panels\SimulationDiseasePanel.cs">
       <SubType>UserControl</SubType>
