--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Components\BoolComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Components\DateTimeComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Components\EComponentTag.cs" />
     <Compile Include="Components\FactorComponent.cs">
       <SubType>UserControl</SubType>
@@ -82,6 +85,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Miscellaneous\FinalSettingsContainer.cs" />
     <Compile Include="Miscellaneous\IContainer.cs" />
     <Compile Include="Miscellaneous\IService.cs" />
     <Compile Include="Miscellaneous\ListBoxOutputTarget.cs" />
