--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -85,6 +85,9 @@
     <Compile Include="Components\SettingsComponent.Designer.cs">
       <DependentUpon>SettingsComponent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Components\SwitchComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Components\TextComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -113,6 +116,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Review\Panels\IRawReviewPanel.cs" />
     <Compile Include="Review\Panels\IReviewPanel.cs" />
+    <Compile Include="Review\Panels\ReviewInformationPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Review\Panels\ReviewInformationPanel.Designer.cs">
+      <DependentUpon>ReviewInformationPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Review\Panels\ReviewSettingsPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -199,6 +208,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Review\Panels\ReviewInformationPanel.resx">
+      <DependentUpon>ReviewInformationPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Review\Panels\ReviewSettingsPanel.resx">
       <DependentUpon>ReviewSettingsPanel.cs</DependentUpon>
     </EmbeddedResource>
