--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -122,6 +122,12 @@
     <Compile Include="Review\Panels\ReviewInformationPanel.Designer.cs">
       <DependentUpon>ReviewInformationPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Review\Panels\ReviewOutputPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Review\Panels\ReviewOutputPanel.Designer.cs">
+      <DependentUpon>ReviewOutputPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Review\Panels\ReviewSettingsPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -139,6 +145,12 @@
     </Compile>
     <Compile Include="Review\ReviewFirstContainer.Designer.cs">
       <DependentUpon>ReviewFirstContainer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Review\ReviewSecondContainer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Review\ReviewSecondContainer.Designer.cs">
+      <DependentUpon>ReviewSecondContainer.cs</DependentUpon>
     </Compile>
     <Compile Include="Review\Services\ReviewService.cs" />
     <Compile Include="Simulation\FactorContainerForm.cs">
@@ -217,6 +229,9 @@
     <EmbeddedResource Include="Review\Panels\ReviewInformationPanel.resx">
       <DependentUpon>ReviewInformationPanel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Review\Panels\ReviewOutputPanel.resx">
+      <DependentUpon>ReviewOutputPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Review\Panels\ReviewSettingsPanel.resx">
       <DependentUpon>ReviewSettingsPanel.cs</DependentUpon>
     </EmbeddedResource>
@@ -225,6 +240,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Review\ReviewFirstContainer.resx">
       <DependentUpon>ReviewFirstContainer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Review\ReviewSecondContainer.resx">
+      <DependentUpon>ReviewSecondContainer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Simulation\FactorContainerForm.resx">
       <DependentUpon>FactorContainerForm.cs</DependentUpon>
