Wrote some Tests to test fixed AgeingComponent and actually found some bugs.. should mostly work as intended now

--- a/EpidemicSim_Tests/EpidemicSim_Tests.csproj
+++ b/EpidemicSim_Tests/EpidemicSim_Tests.csproj
@@ -71,7 +71,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Diseases\" />
+    <Folder Include="DiseaseData\" />
     <Folder Include="IO\Files\" />
     <Folder Include="IO\Writers\" />
     <Folder Include="Statistics\" />
