--- a/EpidemicSim_GUI/EpidemicSim_GUI.csproj
+++ b/EpidemicSim_GUI/EpidemicSim_GUI.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Components\BoolComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Components\ColorRangeComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Components\DateTimeComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -112,6 +115,12 @@
     <Compile Include="Miscellaneous\SimulationSettingsContainer.cs" />
     <Compile Include="Miscellaneous\TextDisplayingProgressBar.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Miscellaneous\TwoButtonStartContainer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Miscellaneous\TwoButtonStartContainer.Designer.cs">
+      <DependentUpon>TwoButtonStartContainer.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -222,6 +231,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Miscellaneous\Separator.resx">
       <DependentUpon>Separator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Miscellaneous\TwoButtonStartContainer.resx">
+      <DependentUpon>TwoButtonStartContainer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
