InputDataParsers: added the bw-image of germany. Match&Store now searches for this mono variant to put it into the .dep... So if you want to see a more clear image in the GUI: rebuild .dep (delete or rename the old one).

--- a/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
+++ b/EpidemicSim_InputDataParsers/EpidemicSim_InputDataParsers.csproj
@@ -95,6 +95,7 @@
     <Content Include="Deutschland_og.bmp" />
     <Content Include="landcirclecoords.txt" />
     <Content Include="testcoords.txt" />
+    <Content Include="departments_mono_big.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
