--- a/EpidemicSim_DetailedInputParser/EpidemicSim_DetailedInputParser.csproj
+++ b/EpidemicSim_DetailedInputParser/EpidemicSim_DetailedInputParser.csproj
@@ -48,17 +48,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CityPointParsing.cs" />
-    <Compile Include="Correction.cs" />
-    <Compile Include="Flood.cs" />
-    <Compile Include="Merging.cs" />
-    <Compile Include="Parsing.cs" />
+    <Compile Include="DataCorrection\FixAGS.cs" />
+    <Compile Include="DataCorrection\FixCityStates.cs" />
+    <Compile Include="DataCorrection\FixIslands.cs" />
+    <Compile Include="DataCorrection\RemoveUselessData.cs" />
+    <Compile Include="Merging\MergeDepartmentpoints.cs" />
+    <Compile Include="Merging\MergePopulationSpace.cs" />
+    <Compile Include="PointParsing\HelpingClasses\City.cs" />
+    <Compile Include="PointParsing\HelpingClasses\CityPointContainer.cs" />
+    <Compile Include="PointParsing\HelpingClasses\DepartmentPoint.cs" />
+    <Compile Include="PointParsing\HelpingClasses\DepInfo.cs" />
+    <Compile Include="PointParsing\ParseCityPointCOUNTS.cs" />
+    <Compile Include="PointParsing\ParseCityPoints.cs" />
+    <Compile Include="PointParsing\ParseDepartmentpointfile.cs" />
+    <Compile Include="PointParsing\HelpingClasses\PixelData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Saving\CreateDepFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
